--- a/app/globals.css
+++ b/app/globals.css
@@ -32,5 +32,16 @@ html {
 }
 .input-group input,
 .input-group textarea {
-  @apply px-4 py-2 bg-gray-100 w-full focus:border focus:border-gray-300 rounded-md outline-none text-sm;
+  @apply px-4 py-2.5 bg-gray-100 w-full focus:border focus:border-gray-400 rounded-md outline-none text-sm;
+}
+
+/* Input group admin */
+
+.input-group-admin label {
+  @apply block text-xs mb-3;
+}
+.input-group-admin input,
+.input-group-admin select,
+.input-group-admin textarea {
+  @apply px-4 py-2.5 w-full border border-gray-400 focus:border-gray-500 rounded-md outline-none text-sm;
 }
